# ibkr-algo-lab

./: gitignore.gitignore  readme.md
daemon/: README.md  __init__.py  pyproject.toml
daemon/persistence/: README.md  __init__.py  database.py  models.py
daemon/strategies/: __init__.py  base.py
docs/: README.md
frontend/: README.md
infra/: README.md
